Crash when switching modes via mix of TAB and spacebar menu #34462

Closed
opened 2013-02-27 18:57:33 +01:00 by Roy Curtis · 5 comments

%%%--- Operating System, Graphics card ---
Windows 8, x64
ATI Mobility Radeon HD 3650
Pentium Dual-Core #2400 (2 cores, 2GHZ)
4GB RAM

- Blender version with error, and version that worked ---

2.66.0 (r54697) 64x
no known working previous version

- Short description of error ---

Using a mixture of the TAB shortcut and the spacebar context menu to switch modes causes a crash, with no crash handler appearing (e.g. WER does not appear)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Press Spacebar and type "vertex paint", then press enter on "Vertex Paint Mode"
  2. Press spacebar and type "weight paint", then press enter on "Weight Paint Mode"
  3. Press TAB; observe exit%%%
%%%--- Operating System, Graphics card --- Windows 8, x64 ATI Mobility Radeon HD 3650 Pentium Dual-Core #2400 (2 cores, 2GHZ) 4GB RAM - Blender version with error, and version that worked --- 2.66.0 (r54697) 64x no known working previous version - Short description of error --- Using a mixture of the TAB shortcut and the spacebar context menu to switch modes causes a crash, with no crash handler appearing (e.g. WER does not appear) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Press Spacebar and type "vertex paint", then press enter on "Vertex Paint Mode" 2. Press spacebar and type "weight paint", then press enter on "Weight Paint Mode" 3. Press TAB; observe exit%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%can confirm this.
backtrace:

0 0x0000000001ae4e4f in WM_operatortype_find (idname=0x0, quiet=0)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_operators.c:118

1 0x0000000001ad8231 in WM_operator_name_call (C=0x6633c28, opstring=0x0, context=7, properties=0x0)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1132

2 0x0000000001e9bb54 in object_mode_set_exec (C=0x6633c28, op=0x85702c8)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/object/object_edit.c:1521

3 0x0000000001ad7b11 in wm_operator_invoke (C=0x6633c28, ot=0x69aab18, event=0x85b0bd8,

  properties=0x7b9d858, reports=0x0, poll_only=0)
  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:913

4 0x0000000001ad8f34 in wm_handler_operator_call (C=0x6633c28, handlers=0x6c06b50, handler=0x6f44018,

  event=0x85b0bd8, properties=0x7b9d858)
  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1490

5 0x0000000001ad97cb in wm_handlers_do_intern (C=0x6633c28, event=0x85b0bd8, handlers=0x6c06b50)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1758

6 0x0000000001ad9b67 in wm_handlers_do (C=0x6633c28, event=0x85b0bd8, handlers=0x6c06b50)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1869

7 0x0000000001ada72c in wm_event_do_handlers (C=0x6633c28)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:2162

8 0x0000000001ad1299 in WM_main (C=0x6633c28)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm.c:447

9 0x0000000001ad05e7 in main (argc=1, argv=0x7fffffffe1c8)

  at /home/philippo/workspace/Blender_trunk/blender/source/creator/creator.c:1619%%%
%%%can confirm this. backtrace: # 0 0x0000000001ae4e4f in WM_operatortype_find (idname=0x0, quiet=0) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_operators.c:118 ``` # 1 0x0000000001ad8231 in WM_operator_name_call (C=0x6633c28, opstring=0x0, context=7, properties=0x0) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1132 ``` # 2 0x0000000001e9bb54 in object_mode_set_exec (C=0x6633c28, op=0x85702c8) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/object/object_edit.c:1521 ``` # 3 0x0000000001ad7b11 in wm_operator_invoke (C=0x6633c28, ot=0x69aab18, event=0x85b0bd8, ``` properties=0x7b9d858, reports=0x0, poll_only=0) at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:913 ``` # 4 0x0000000001ad8f34 in wm_handler_operator_call (C=0x6633c28, handlers=0x6c06b50, handler=0x6f44018, ``` event=0x85b0bd8, properties=0x7b9d858) at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1490 ``` # 5 0x0000000001ad97cb in wm_handlers_do_intern (C=0x6633c28, event=0x85b0bd8, handlers=0x6c06b50) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1758 ``` # 6 0x0000000001ad9b67 in wm_handlers_do (C=0x6633c28, event=0x85b0bd8, handlers=0x6c06b50) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:1869 ``` # 7 0x0000000001ada72c in wm_event_do_handlers (C=0x6633c28) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_event_system.c:2162 ``` # 8 0x0000000001ad1299 in WM_main (C=0x6633c28) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm.c:447 ``` # 9 0x0000000001ad05e7 in main (argc=1, argv=0x7fffffffe1c8) ``` at /home/philippo/workspace/Blender_trunk/blender/source/creator/creator.c:1619%%%
Member

%%%This part of our code got convulated in the past.

  • ob->mode is a bitflag, allowing to have every mode bit set.

  • but still there's an object->restore_mode to switch back to previous.

  • object_edit.c:object_mode_op_string() is not checking for the flags, except for editmode

  • the set_vpaint code disables wpaint, but vpaint not for wpaint.

  • also sculpt mode keeps all the other paint options on in ob->mode.

  • the view3d header menu for modes probably thinks completely different about it too.

I think there's too many people having different ideas for how it should work! This has to be handled. Need campbell's advice for it.

%%%

%%%This part of our code got convulated in the past. - ob->mode is a bitflag, allowing to have every mode bit set. - but still there's an object->restore_mode to switch back to previous. - object_edit.c:object_mode_op_string() is not checking for the flags, except for editmode - the set_vpaint code disables wpaint, but vpaint not for wpaint. - also sculpt mode keeps all the other paint options on in ob->mode. - the view3d header menu for modes probably thinks completely different about it too. I think there's too many people having different ideas for how it should work! This has to be handled. Need campbell's advice for it. %%%

%%%fixed r59628, will check further on ensuring mixed modes don't happen.%%%

%%%fixed r59628, will check further on ensuring mixed modes don't happen.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34462
No description provided.