fix [#34462] Crash when switching modes via mix of TAB and spacebar menu